# xing-api-haskell

./: .ghci  .gitignore  .project-settings.yml  .travis.yml  Berksfile  Cheffile  CliDemo.hs  Config.hs.template  Dockerfile  Gemfile  LICENSE  Makefile  README.markdown  Vagrantfile  xing-api.cabal
Test/: TestMain.hs
Test/Types/: AddressTest.hs  AwardTest.hs  BirthDateTest.hs  ProfessionalExperienceTest.hs
Test/Types/User/: FullUserTest.hs  MinimalUserTest.hs
Web/: XING.hs
Web/XING/: API.hs  Auth.hs  Calls.hs  Types.hs
Web/XING/API/: Error.hs
Web/XING/Calls/: IdCard.hs  User.hs
Web/XING/Internal/: AuthenticateOAuthPatch.hs
Web/XING/Types/: Address.hs  Award.hs  General.hs  ProfessionalExperience.hs  User.hs
Web/XING/Types/User/: FullUser.hs  MinimalUser.hs
Yesod/Auth/: XING.hs
demos/: CliDemo.hs  Config.hs.template  README.markdown  YesodHelper.hs  cli-demo.hs  hello-XING.hs  helloXING.hs  minimal.hs  yesod-auth.hs  yesod-demo.hs  yesodAuth.hs
demos/Helper/: YesodHelper.hs
lib/Web/: XING.hs
lib/Web/XING/: API.hs  Auth.hs  Types.hs
lib/Web/XING/API/: Error.hs
lib/Web/XING/Calls/: IdCard.hs  User.hs
lib/Web/XING/Internal/: AuthenticateOAuthPatch.hs
lib/Web/XING/Types/: Award.hs  BirthDate.hs  ProfessionalExperience.hs
lib/Web/XING/Types/User/: MinimalUser.hs
test/Types/: AddressTest.hs  AwardTest.hs  BirthDateTest.hs  ProfessionalExperienceTest.hs
test/Types/User/: FullUserTest.hs  MinimalUserTest.hs
tests/: Main.hs
tests/Types/: AddressTest.hs  AwardTest.hs  BirthDateTest.hs  ProfessionalExperienceTest.hs
tests/Types/User/: FullUserTest.hs  MinimalUserTest.hs
yesod-demo/: Makefile  helloXING.hs
