name:                xing-api
version:             0.0.1
license:             BSD3
license-file:        LICENSE
category:            Web
copyright:           Copyright 2013 Jan Ahrens
author:              Jan Ahrens
maintainer:          Jan Ahrens
cabal-version:       >=1.8
homepage:            http://github.com/JanAhrens/xing-api-haskell
bug-reports:         http://github.com/JanAhrens/xing-api-haskell/issues
build-type:          Simple
synopsis:            Wrapper for the XING API
description:
  This library is currently under development and not considered stable.
  .
  The source repository includes some demo programs in the demos directory.
  To use the demos, you have to obtain an API consumer key from
  https://dev.xing.com and create a demos/Config.hs file.
  The Config.hs.template file is recommended to be used as a template.
  .
      > cp demos/Config.hs.template demos/Config.hs

library
  exposed-modules: Web.XING Yesod.Auth.XING
  ghc-options:     -Wall

  build-depends: base                 ==4.5.*
               , containers           ==0.4.*
               , unordered-containers ==0.2.*
               , time                 ==1.4.*
               , network              ==2.3.*
               , text                 ==0.11.*
               , authenticate-oauth   ==1.4.*
               , conduit              ==1.0.*
               , http-types           ==0.8.*
               , http-conduit         ==1.8.*
               , resourcet            ==0.4.*
               , transformers         ==0.2.*
               , bytestring           ==0.9.*
               , aeson                ==0.6.*
               , lifted-base          ==0.2.*
               , monad-control        ==0.3.*

               , yesod-core           >=1.1 && < 1.2
               , yesod-auth           >=1.1 && < 1.2
               , hamlet               >=1.1 && < 1.2

source-repository head
  type:        git
  location:    http://github.com/JanAhrens/xing-api-haskell.git
