name:                xing-api
version:             0.0.1
synopsis:            Wrapper for the XING API
description:         This library is currently under development and not considered stable.
                     .
                     The source repository includes some demo programs in the demos directory.
                     To use the demos, you have to obtain an API consumer key from
                     https://dev.xing.com and create a demos/Config.hs file.
                     The Config.hs.template file is recommended to be used as a template.
                     .
                     > cp demos/Config.hs.template demos/Config.hs
license:             BSD3
license-file:        LICENSE
category:            Web
copyright:           Copyright 2013 Jan Ahrens
author:              Jan Ahrens
maintainer:          Jan Ahrens
cabal-version:       >=1.10
homepage:            http://github.com/JanAhrens/xing-api-haskell
bug-reports:         http://github.com/JanAhrens/xing-api-haskell/issues
build-type:          Simple

flag demos
  default:           False
  description:       Build demo programms

source-repository head
  type:              git
  location:          http://github.com/JanAhrens/xing-api-haskell.git

library
  exposed-modules:     Web.XING
                     , Yesod.Auth.XING

  build-depends:       base                    == 4.5.*
                     , containers              == 0.4.*
                     , time                    == 1.4.*
                     , text                    == 0.11.*
                     , authenticate-oauth      == 1.4.*
                     , http-types              == 0.8.*
                     , http-conduit            == 1.8.*
                     , resourcet               == 0.4.*
                     , transformers            == 0.2.*
                     , text                    == 0.11.*
                     , bytestring              == 0.9.*
                     , aeson                   == 0.6.*
                     , lifted-base             == 0.2.*
                     , monad-control           == 0.3.*
                     , yesod-core              == 1.1.*
                     , yesod-auth              == 1.1.*
                     , hamlet                  == 1.1.*

  other-modules:       Web.XING.API
                     , Web.XING.API.Error
                     , Web.XING.Calls.IdCard
                     , Web.XING.Calls.User
                     , Web.XING.Internal.AuthenticateOAuthPatch
                     , Web.XING.Types
                     , Web.XING.Types.User
                     , Web.XING.Types.User.MinimalUser
                     , Web.XING.Types.User.FullUser
                     , Web.XING.Types.Address
                     , Web.XING.Types.Award
                     , Web.XING.Types.BirthDate
                     , Web.XING.Types.ProfessionalExperience
                     , Web.XING.Auth

  hs-source-dirs:    lib
  ghc-options:       -Wall -Werror
  default-language:  Haskell2010

Test-Suite TestMain
  type:              exitcode-stdio-1.0
  build-depends:       base                    == 4.5.*
                     , HTF                     == 0.10.*
                     , text                    == 0.11.*
                     , bytestring              == 0.9.*
                     , aeson                   == 0.6.*
                     , containers              == 0.4.*
                     , time                    == 1.4.*
                     , xing-api
  hs-source-dirs:    tests
  main-is:           Main.hs
  ghc-options:       -Wall
  default-language:  Haskell2010

executable cli-demo
  if flag(demos)
    buildable:       True
    build-depends:     base                    == 4.*
                     , bytestring              == 0.9.*
                     , http-conduit            == 1.8.*
                     , monad-control           == 0.3.*
                     , resourcet               == 0.4.*
                     , text                    == 0.11.*
                     , transformers            == 0.2.*
                     , xing-api
  else
    buildable:       False
  hs-source-dirs:    demos
  main-is:           cli-demo.hs
  GHC-options:       -Wall -Werror
  Default-language:  Haskell2010

executable minimal
  hs-source-dirs:    demos
  if flag(demos)
    buildable:       True
    build-depends:     base                    == 4.*
                     , bytestring              == 0.9.*
                     , xing-api
  else
    buildable:       False
  main-is:           minimal.hs
  GHC-options:       -Wall -Werror
  Default-language:  Haskell2010

executable hello-xing
  hs-source-dirs:    demos
  if flag(demos)
    buildable:       True
    build-depends:     base                    == 4.*
                     , bytestring              == 0.9.*
                     , containers              == 0.4.*
                     , hamlet                  == 1.1.*
                     , http-conduit            == 1.8.*
                     , shakespeare-i18n        == 1.0.*
                     , text                    == 0.11.*
                     , time                    == 1.4.*
                     , warp                    == 1.3.*
                     , xing-api
                     , yesod-core              == 1.1.*
  else
    buildable:       False
  main-is:           hello-XING.hs
  GHC-options:       -Wall -Werror
  Default-language:  Haskell2010

executable yesod-auth
  hs-source-dirs:    demos
  if flag(demos)
    buildable:       True
    build-depends:     base                    == 4.*
                     , bytestring              == 0.9.*
                     , containers              == 0.4.*
                     , hamlet                  == 1.1.*
                     , http-conduit            == 1.8.*
                     , shakespeare-i18n        == 1.0.*
                     , shakespeare-js          == 1.1.*
                     , text                    == 0.11.*
                     , time                    == 1.4.*
                     , warp                    == 1.3.*
                     , xing-api
                     , yesod-auth              == 1.1.*
                     , yesod-core              == 1.1.*
                     , yesod-form              == 1.2.*
  else
    buildable:       False
  main-is:           yesod-auth.hs
  GHC-options:       -Wall -Werror
  Default-language:  Haskell2010
